--- a/PandasPyCitySchools_DAK/PyCitySchoolsFinal_DAK.ipynb
+++ b/PandasPyCitySchools_DAK/PyCitySchoolsFinal_DAK.ipynb
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -660,34 +660,194 @@
        "      <td>96.539641</td>\n",
        "      <td>95.203679</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Wright High School</td>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1800</td>\n",
+       "      <td>$1,049,400.00</td>\n",
+       "      <td>$583.00</td>\n",
+       "      <td>83.682222</td>\n",
+       "      <td>83.955000</td>\n",
+       "      <td>93.333333</td>\n",
+       "      <td>96.611111</td>\n",
+       "      <td>94.972222</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Shelton High School</td>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1761</td>\n",
+       "      <td>$1,056,600.00</td>\n",
+       "      <td>$600.00</td>\n",
+       "      <td>83.359455</td>\n",
+       "      <td>83.725724</td>\n",
+       "      <td>93.867121</td>\n",
+       "      <td>95.854628</td>\n",
+       "      <td>94.860875</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Holden High School</td>\n",
+       "      <td>Charter</td>\n",
+       "      <td>427</td>\n",
+       "      <td>$248,087.00</td>\n",
+       "      <td>$581.00</td>\n",
+       "      <td>83.803279</td>\n",
+       "      <td>83.814988</td>\n",
+       "      <td>92.505855</td>\n",
+       "      <td>96.252927</td>\n",
+       "      <td>94.379391</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Bailey High School</td>\n",
+       "      <td>District</td>\n",
+       "      <td>4976</td>\n",
+       "      <td>$3,124,928.00</td>\n",
+       "      <td>$628.00</td>\n",
+       "      <td>77.048432</td>\n",
+       "      <td>81.033963</td>\n",
+       "      <td>66.680064</td>\n",
+       "      <td>81.933280</td>\n",
+       "      <td>74.306672</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Hernandez High School</td>\n",
+       "      <td>District</td>\n",
+       "      <td>4635</td>\n",
+       "      <td>$3,022,020.00</td>\n",
+       "      <td>$652.00</td>\n",
+       "      <td>77.289752</td>\n",
+       "      <td>80.934412</td>\n",
+       "      <td>66.752967</td>\n",
+       "      <td>80.862999</td>\n",
+       "      <td>73.807983</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Ford High School</td>\n",
+       "      <td>District</td>\n",
+       "      <td>2739</td>\n",
+       "      <td>$1,763,916.00</td>\n",
+       "      <td>$644.00</td>\n",
+       "      <td>77.102592</td>\n",
+       "      <td>80.746258</td>\n",
+       "      <td>68.309602</td>\n",
+       "      <td>79.299014</td>\n",
+       "      <td>73.804308</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Johnson High School</td>\n",
+       "      <td>District</td>\n",
+       "      <td>4761</td>\n",
+       "      <td>$3,094,650.00</td>\n",
+       "      <td>$650.00</td>\n",
+       "      <td>77.072464</td>\n",
+       "      <td>80.966394</td>\n",
+       "      <td>66.057551</td>\n",
+       "      <td>81.222432</td>\n",
+       "      <td>73.639992</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Huang High School</td>\n",
+       "      <td>District</td>\n",
+       "      <td>2917</td>\n",
+       "      <td>$1,910,635.00</td>\n",
+       "      <td>$655.00</td>\n",
+       "      <td>76.629414</td>\n",
+       "      <td>81.182722</td>\n",
+       "      <td>65.683922</td>\n",
+       "      <td>81.316421</td>\n",
+       "      <td>73.500171</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Figueroa High School</td>\n",
+       "      <td>District</td>\n",
+       "      <td>2949</td>\n",
+       "      <td>$1,884,411.00</td>\n",
+       "      <td>$639.00</td>\n",
+       "      <td>76.711767</td>\n",
+       "      <td>81.158020</td>\n",
+       "      <td>65.988471</td>\n",
+       "      <td>80.739234</td>\n",
+       "      <td>73.363852</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Rodriguez High School</td>\n",
+       "      <td>District</td>\n",
+       "      <td>3999</td>\n",
+       "      <td>$2,547,363.00</td>\n",
+       "      <td>$637.00</td>\n",
+       "      <td>76.842711</td>\n",
+       "      <td>80.744686</td>\n",
+       "      <td>66.366592</td>\n",
+       "      <td>80.220055</td>\n",
+       "      <td>73.293323</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          School\\nName School\\nType  Total\\nStudents Total School\\nBudget  \\\n",
-       "0  Cabrera High School      Charter             1858        $1,081,356.00   \n",
-       "1   Thomas High School      Charter             1635        $1,043,130.00   \n",
-       "2     Pena High School      Charter              962          $585,858.00   \n",
-       "3  Griffin High School      Charter             1468          $917,500.00   \n",
-       "4   Wilson High School      Charter             2283        $1,319,574.00   \n",
+       "             School\\nName School\\nType  Total\\nStudents Total School\\nBudget  \\\n",
+       "0     Cabrera High School      Charter             1858        $1,081,356.00   \n",
+       "1      Thomas High School      Charter             1635        $1,043,130.00   \n",
+       "2        Pena High School      Charter              962          $585,858.00   \n",
+       "3     Griffin High School      Charter             1468          $917,500.00   \n",
+       "4      Wilson High School      Charter             2283        $1,319,574.00   \n",
+       "5      Wright High School      Charter             1800        $1,049,400.00   \n",
+       "6     Shelton High School      Charter             1761        $1,056,600.00   \n",
+       "7      Holden High School      Charter              427          $248,087.00   \n",
+       "8      Bailey High School     District             4976        $3,124,928.00   \n",
+       "9   Hernandez High School     District             4635        $3,022,020.00   \n",
+       "10       Ford High School     District             2739        $1,763,916.00   \n",
+       "11    Johnson High School     District             4761        $3,094,650.00   \n",
+       "12      Huang High School     District             2917        $1,910,635.00   \n",
+       "13   Figueroa High School     District             2949        $1,884,411.00   \n",
+       "14  Rodriguez High School     District             3999        $2,547,363.00   \n",
        "\n",
-       "  Per Student\\nBudget  Average Math\\nScore  Average Reading\\nScore  \\\n",
-       "0             $582.00            83.061895               83.975780   \n",
-       "1             $638.00            83.418349               83.848930   \n",
-       "2             $609.00            83.839917               84.044699   \n",
-       "3             $625.00            83.351499               83.816757   \n",
-       "4             $578.00            83.274201               83.989488   \n",
+       "   Per Student\\nBudget  Average Math\\nScore  Average Reading\\nScore  \\\n",
+       "0              $582.00            83.061895               83.975780   \n",
+       "1              $638.00            83.418349               83.848930   \n",
+       "2              $609.00            83.839917               84.044699   \n",
+       "3              $625.00            83.351499               83.816757   \n",
+       "4              $578.00            83.274201               83.989488   \n",
+       "5              $583.00            83.682222               83.955000   \n",
+       "6              $600.00            83.359455               83.725724   \n",
+       "7              $581.00            83.803279               83.814988   \n",
+       "8              $628.00            77.048432               81.033963   \n",
+       "9              $652.00            77.289752               80.934412   \n",
+       "10             $644.00            77.102592               80.746258   \n",
+       "11             $650.00            77.072464               80.966394   \n",
+       "12             $655.00            76.629414               81.182722   \n",
+       "13             $639.00            76.711767               81.158020   \n",
+       "14             $637.00            76.842711               80.744686   \n",
        "\n",
-       "   % Passing\\nMath  % Passing\\nReading  % Overall Passing\\nRate  \n",
-       "0        94.133477           97.039828                95.586652  \n",
-       "1        93.272171           97.308869                95.290520  \n",
-       "2        94.594595           95.945946                95.270270  \n",
-       "3        93.392371           97.138965                95.265668  \n",
-       "4        93.867718           96.539641                95.203679  "
+       "    % Passing\\nMath  % Passing\\nReading  % Overall Passing\\nRate  \n",
+       "0         94.133477           97.039828                95.586652  \n",
+       "1         93.272171           97.308869                95.290520  \n",
+       "2         94.594595           95.945946                95.270270  \n",
+       "3         93.392371           97.138965                95.265668  \n",
+       "4         93.867718           96.539641                95.203679  \n",
+       "5         93.333333           96.611111                94.972222  \n",
+       "6         93.867121           95.854628                94.860875  \n",
+       "7         92.505855           96.252927                94.379391  \n",
+       "8         66.680064           81.933280                74.306672  \n",
+       "9         66.752967           80.862999                73.807983  \n",
+       "10        68.309602           79.299014                73.804308  \n",
+       "11        66.057551           81.222432                73.639992  \n",
+       "12        65.683922           81.316421                73.500171  \n",
+       "13        65.988471           80.739234                73.363852  \n",
+       "14        66.366592           80.220055                73.293323  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -698,7 +858,7 @@
     "\n",
     "TopPerformingSchools = TopPerformingSchools.reset_index(drop=True)\n",
     "\n",
-    "TopPerformingSchools.head()"
+    "TopPerformingSchools"
    ]
   },
   {
