--- a/PandasPyCitySchools_DAK/PyCitySchoolsFinal_DAK.ipynb
+++ b/PandasPyCitySchools_DAK/PyCitySchoolsFinal_DAK.ipynb
@@ -1318,16 +1318,23 @@
     }
    ],
    "source": [
-    "############## Reading Scores by Grade\n",
+    "################################ Reading Socres by Grade ############################################################\n",
+    "#Ninth Grade Reading Score Information\n",
     "NinthGradeR = Reading_Data.loc[Reading_Data['grade']=='9th']\n",
     "NinthGradeGroupedR = NinthGradeR.groupby('school_name').agg({'reading_score':'mean'})\n",
     "NinthGradeGroupedR = NinthGradeGroupedR.rename(columns={'reading_score':\"9th\"})\n",
+    "\n",
+    "#Tenth Grade Reading Score Information\n",
     "TenthGradeR = Reading_Data.loc[Reading_Data['grade']=='10th']\n",
     "TenthGradeGroupedR = TenthGradeR.groupby('school_name').agg({'reading_score':'mean'})\n",
     "TenthGradeGroupedR = TenthGradeGroupedR.rename(columns={'reading_score':\"10th\"})\n",
+    "\n",
+    "#Eleventh Grade Reading Score Information\n",
     "EleventhGradeR = Reading_Data.loc[Reading_Data['grade']=='11th']\n",
     "EleventhGradeGroupedR = EleventhGradeR.groupby('school_name').agg({'reading_score':'mean'})\n",
     "EleventhGradeGroupedR = EleventhGradeGroupedR.rename(columns={'reading_score':'11th'})\n",
+    "\n",
+    "#Twelfth Grade Reading Score Information\n",
     "TwelfthGradeR = Reading_Data.loc[Reading_Data['grade']=='12th']\n",
     "TwelfthGradeGroupedR = TwelfthGradeR.groupby('school_name').agg({'reading_score':'mean'})\n",
     "TwelfthGradeGroupedR = TwelfthGradeGroupedR.rename(columns={'reading_score':'12th'})\n",
@@ -1468,13 +1475,16 @@
     }
    ],
    "source": [
-    "### Scores by School Spending\n",
+    "################################ Socres by School Spending ############################################################\n",
+    "\n",
     "# Create Spending Bins\n",
     "bins = [0, 590, 620, 650, 680]\n",
     "bin_name = [\"<$590\", \"$591-620\", \"$621-650\", \"$651-680\"]\n",
+    "\n",
     "#Reference unformated values so they are floats or ints - not formatted objects\n",
     "School_SpendingDF = School_SummaryPREDF[['Cost_Per', 'math_score', 'reading_score', 'Math Passing',\n",
     "       'Reading Passing', 'Overall Passing']]\n",
+    "\n",
     "#Rename Columns\n",
     "School_SpendingDF = School_SpendingDF.rename(columns={\n",
     "    \"math_score\":\"Average Math\\nScore\",\n",
@@ -1482,10 +1492,13 @@
     "    \"Math Passing\":\"% Passing\\nMath\",\n",
     "    \"Reading Passing\":\"% Passing\\nReading\",\n",
     "    \"Overall Passing\":\"% Overall Passing\\nRate\"})\n",
+    "\n",
     "#Insert Bin Column\n",
     "School_SpendingDF[\"Spending Ranges (Per Student)\"] = pd.cut(School_SpendingDF[\"Cost_Per\"], bins, labels=bin_name)\n",
+    "\n",
     "#Groupby Bin Column\n",
     "Scores_School_Spending = School_SpendingDF.groupby('Spending Ranges (Per Student)')\n",
+    "\n",
     "#Rename Columns\n",
     "Scores_School_Spending_Bin = Scores_School_Spending[[\"Average Reading\\nScore\",\"Average Reading\\nScore\",\"% Passing\\nMath\",\n",
     "                                                     \"% Passing\\nReading\",\"% Overall Passing\\nRate\"]]\n",
@@ -1607,13 +1620,16 @@
     }
    ],
    "source": [
-    "############# Scores by School Size\n",
+    "################################ Scores by School Size ############################################################\n",
+    "\n",
+    "#Create bins and group names\n",
     "size_bins = [0, 1000, 2000, 5000]\n",
     "size_groupnames = [\"Small (<1000)\", \"Medium (1000-1999)\", \"Large(2000 - 5000)\"]\n",
     "\n",
     "#Reference unformated values so they are floats or ints - not formatted objects\n",
     "School_SizeDF = School_SummaryPREDF[['size', 'math_score', 'reading_score', 'Math Passing',\n",
     "       'Reading Passing', 'Overall Passing']]\n",
+    "\n",
     "#Rename Columns\n",
     "School_SizeDF = School_SizeDF.rename(columns={\n",
     "    \"math_score\":\"Average Math\\nScore\",\n",
@@ -1621,10 +1637,13 @@
     "    \"Math Passing\":\"% Passing\\nMath\",\n",
     "    \"Reading Passing\":\"% Passing\\nReading\",\n",
     "    \"Overall Passing\":\"% Overall Passing\\nRate\"})\n",
+    "\n",
     "#Insert Bin Column\n",
     "School_SizeDF[\"School Size\"] = pd.cut(School_SizeDF[\"size\"], size_bins, labels=size_groupnames)\n",
+    "\n",
     "#Groupby Bin Column\n",
     "Scores_School_Size = School_SizeDF.groupby('School Size')\n",
+    "\n",
     "#Rename Columns\n",
     "Scores_School_Size_Bin = Scores_School_Size[[\"Average Reading\\nScore\",\"Average Reading\\nScore\",\"% Passing\\nMath\",\n",
     "                                                     \"% Passing\\nReading\",\"% Overall Passing\\nRate\"]]\n",
@@ -1731,8 +1750,12 @@
     }
    ],
    "source": [
-    "######## Sort By School Type\n",
+    "################################ Scores by School Type ############################################################\n",
+    "\n",
+    "#Groupby School Type\n",
     "ScoresByType = School_SummaryDF.groupby(\"School\\nType\")\n",
+    "\n",
+    "#Groupby School Type with additional columns\n",
     "ScoresBySchoolType = ScoresByType.agg({\n",
     "    \"Average Math\\nScore\":'mean',\n",
     "    \"Average Reading\\nScore\":'mean',\n",
